update CMakeLists.txt and cmake_tcc.bat

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -536,15 +536,18 @@ set(CROSS_TARGET_x86_64 TCC_TARGET_X86_64
 
 set(CROSS_TARGET_i386-win32 TCC_TARGET_I386 TCC_TARGET_PE
  CONFIG_TCC_CROSSPREFIX=\"i386-win32-\"
- CONFIG_TCCDIR=\"/usr/local/lib/tcc/win32\")
+ CONFIG_TCCDIR=\"${CMAKE_INSTALL_PREFIX}\"
+ CONFIG_TCC_SYSINCLUDEPATHS=\"{B}/lib/tcc/win32\")
 
 set(CROSS_TARGET_x86_64-win32 TCC_TARGET_X86_64 TCC_TARGET_PE
  CONFIG_TCC_CROSSPREFIX=\"x86_64-win32-\"
- CONFIG_TCCDIR=\"/usr/local/lib/tcc/win32\")
+ CONFIG_TCCDIR=\"${CMAKE_INSTALL_PREFIX}\"
+ CONFIG_TCC_SYSINCLUDEPATHS=\"{B}/lib/tcc/win32\")
 
 set(CROSS_TARGET_arm-wince TCC_TARGET_ARM TCC_ARM_VFP TCC_ARM_EABI TCC_ARM_HARDFLOAT TCC_TARGET_PE
  CONFIG_TCC_CROSSPREFIX=\"arm-wince-\"
- CONFIG_TCCDIR=\"/usr/local/lib/tcc/win32\")
+ CONFIG_TCCDIR=\"${CMAKE_INSTALL_PREFIX}\"
+ CONFIG_TCC_SYSINCLUDEPATHS=\"{B}/lib/tcc/win32\")
 
 set(CROSS_TARGET_arm TCC_TARGET_ARM TCC_ARM_VFP TCC_ARM_EABI TCC_ARM_HARDFLOAT
  CONFIG_TCC_CROSSPREFIX=\"arm-\"
@@ -565,10 +568,12 @@ set(CROSS_TARGET_riscv64 TCC_TARGET_RISCV64
  CONFIG_TCC_SYSINCLUDEPATHS=\"{B}/include:/usr/riscv64-linux-gnu/include:/usr/include\")
 
 set(CROSS_TARGET_x86_64-osx TCC_TARGET_X86_64 TCC_TARGET_MACHO
- CONFIG_TCC_CROSSPREFIX=\"x86_64-osx-\")
+ CONFIG_TCC_CROSSPREFIX=\"x86_64-osx-\"
+ CONFIG_TCC_LIBPATHS=\"{B}/lib\")
 
 set(CROSS_TARGET_arm64-osx TCC_TARGET_ARM64 TCC_TARGET_MACHO
- CONFIG_TCC_CROSSPREFIX=\"arm64-osx-\")
+ CONFIG_TCC_CROSSPREFIX=\"arm64-osx-\"
+ CONFIG_TCC_LIBPATHS=\"{B}/lib\")
 
 set(CROSS_DEFINES -Wall -O2 -Wdeclaration-after-statement -fno-strict-aliasing
  -Wno-pointer-sign -Wno-sign-compare -Wno-unused-result -Wno-format-truncation -Wno-stringopcation)
