ci: update cmake.yml and platforms.yml

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -2,7 +2,7 @@ name: cmake build and run ctest
 
 on:
   pull_request:
-    branches: [ mob ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
