test: update CMakeLists.txt and CMakeLists.txt

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -217,6 +217,7 @@ add_custom_target(
     tcctest ALL
     COMMAND tcc ${TEST_DIR}/tcctest.c ${TCC_CFLAGS} ${LIBTCC_LDFLAGS} -o ${CMAKE_BINARY_DIR}/tcctest${EXESUF}
     BYPRODUCTS ${CMAKE_BINARY_DIR}/tcctest${EXESUF}
+    DEPENDS libarchive
     SOURCES ${TEST_DIR}/tcctest.c )
 
 add_test(NAME tcctest COMMAND tcctest WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
@@ -225,6 +226,7 @@ add_custom_target(
     libtcc_test ALL
     COMMAND tcc ${TEST_DIR}/libtcc_test.c ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/libtcc.a ${TCC_CFLAGS} ${LIBTCC_LDFLAGS} -o ${CMAKE_BINARY_DIR}/libtcc_test${EXESUF}
     BYPRODUCTS ${CMAKE_BINARY_DIR}/libtcc_test${EXESUF}
+    DEPENDS libarchive
     SOURCES ${TEST_DIR}/libtcc_test.c )
 
 add_test(NAME libtcc_test COMMAND libtcc_test -B../built -I../include -I../src WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
