--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,7 +72,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: built/Package/tcc_${{ github.event.release.tag_name }}_Darwin.dmg
+          file: built/Package/tcc-${{ github.event.release.tag_name }}-Darwin.dmg
           asset_name: TinyCC_Installer-Darwin.dmg
           overwrite: true
           file_glob: true
