update CMakeLists.txt and cmalloc.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -641,8 +641,8 @@ foreach(X ${TCC_X})
             list(REMOVE_ITEM CROSS_SRCFILES ${CROSS_EXTRA_O})
     endif()
 
-    if(UNIX AND (${NATIVE_ARCH} STREQUAL aarch64 OR ${NATIVE_ARCH} STREQUAL armv7 OR ${NATIVE_ARCH} STREQUAL arm64 )
-        AND (${X} STREQUAL i386))
+    if((${NATIVE_ARCH} STREQUAL aarch64 OR ${NATIVE_ARCH} STREQUAL armv7 OR ${NATIVE_ARCH} STREQUAL arm64)
+        AND (${X} STREQUAL i386 OR ${X} STREQUAL x86_64))
             list(REMOVE_ITEM CROSS_SRCFILES ${CROSS_EXTRA_O})
     endif()
 
